[package]
edition = "2021"
name = "bodenbot-motor-controller"
version = "0.1.0"
license = "MIT OR Apache-2.0"
default-run = "bodenbot-motor-controller"

[[bin]]
test = false
name = "bodenbot-motor-controller"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
# sparkfun-pro-micro-rp2040 = "0.6"

# If you're not going to use a Board Support Package you'll need these:
# rp2040-hal = { version="0.8", features=["rt", "critical-section-impl"] }
# rp2040-boot2 = "0.2"
# BSP for rp-pico
# rp-pico = "0.8"

# use the BSP for KB2040
# adafruit-kb2040 = "0.6.0"

fugit = { version = "0.3.7", features = ["defmt"] }
fixed = { version = "1.23.1" }
fixed-macro = "1.2"
futures = { version = "0.3.17", default-features = false, features = [
  "async-await",
  "cfg-target-has-atomic",
  "unstable",
] }
heapless = "0.8"
log = "0.4.21"
static_cell = "2.0.0"
portable-atomic = { version = "1.5", features = ["critical-section"] }
pio = "0.2.1"
pio-proc = "0.2.2"
rand = { version = "0.8.5", default-features = false, features= ["small_rng"] }
num-traits = { version = "0.2", default-features = false }
once_cell = { version = "1.19.0", default-features = false, features = ["critical-section"] }

[dependencies.embassy-embedded-hal]
git = "https://github.com/embassy-rs/embassy.git"
features = ["defmt"]

[dependencies.embassy-sync]
git = "https://github.com/embassy-rs/embassy.git"
features = ["defmt"]

[dependencies.embassy-executor]
git = "https://github.com/embassy-rs/embassy.git"
features = [
  "task-arena-size-32768",
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
  "integrated-timers",
]

[dependencies.embassy-time]
git = "https://github.com/embassy-rs/embassy.git"
features = ["defmt", "defmt-timestamp-uptime"]

[dependencies.embassy-rp]
git = "https://github.com/embassy-rs/embassy.git"
features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "intrinsics", "rom-v2-intrinsics", "rom-func-cache"]

[dependencies.embassy-futures]
git = "https://github.com/embassy-rs/embassy.git"

[dependencies.embassy-usb]
git = "https://github.com/embassy-rs/embassy.git"

[dependencies.embassy-usb-logger]
git = "https://github.com/embassy-rs/embassy.git"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
